--- a/index.html
+++ b/index.html
@@ -2,40 +2,110 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>Art Sessions with Miss Robin</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<title>Unplugged</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+<meta property="og:title" content="">
+<meta property="og:type" content="">
+<meta property="og:url" content="">
+<meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+<link rel="manifest" href="site.webmanifest">
+<link rel="apple-touch-icon" href="../art-sessions/icon.png">
+<!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+<meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Art Sessions with Miss Robin</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+<!-- Add your site or application content here -->
+    <header>
+		<div class="content-wrapper">
+		<a href="#" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
+        <div class="header-divider">
+        </div>
+		<nav>
+			<ul>
+				<li><a href="faq/index.html" target="_blank">FAQ</a></li>
+				<li><a href="about/index.html" target="_blank">About</a></li>
+			</ul>
+        </nav>
+		</div>
+    </header>
+	<main>
+		<section>
+			<div clas="hero-image">
+			<h2>Retreat from the desk, return refreshed</h2>
+			</div>
+		</section>
+		<aside>
+			<h3>Whant to join the next retreat?</h3>
+			<p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+			<h3>Find out more</h3>
+			<input type="text" name="name" value="email address">
+			<input type="button" value="Download Itinerary">
+		</aside>
+		<section>
+            <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+            <img src="img/campground.png" alt="Campground"/>
+            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
+            <img src="img/bed.png" alt="Bed"/>
+            <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+            <img src="img/utensils.png" alt="Utensils"/>
+            <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+            <img src="img/shoe-prints.png" alt="Shoe prints"/>
+            <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+            <img src="img/smile.png" alt="Smile"/>
+            <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+            <img src="img/wifi.png" alt="Wifi"/>
+            <p>Dedicated computer room for times that you must wifi.</p>
+		</section>
+		<section>
+			<h2>Be a better team in 5 days, like these.</h2>
+			<img src="img/group-photo.png" alt="Team Photo"/>
+			<h3>LaCrue Bottling Co.<br>
+			October 2017</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+		</section>
+	</main>
+	<footer>
+		<div class="content-wrapper">
+			<div class="footer-content">
+				<div class="contact">
+					<address>
+						<h3>Contact</h3>
+                        <p>555-555-5555<br>
+                        hello@unplugged.com</p>
+					</address>
+				</div>
+				<div class="social-icons">
+					<h3>Social</h3>
+					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"></a></p>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+		</div>
+	</footer>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
+
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
