--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-<!-- Add your site or application content here -->
+<!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
 		<a href="#" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
@@ -38,42 +38,72 @@
         </nav>
 		</div>
     </header>
+	
+	
+<!-- HERO CONTENT HERE -->	
 	<main>
 		<section>
-			<div clas="hero-image">
-			<h2>Retreat from the desk, return refreshed</h2>
+			<div class="content-wrapper">
+                <div class="hero-area">
+                <h2>Retreat from the desk, return refreshed</h2>
+                </div>
 			</div>
 		</section>
+		
+		
+<!-- SIGN UP FORM CONTENT HERE -->		
 		<aside>
-			<h3>Whant to join the next retreat?</h3>
-			<p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-			<h3>Find out more</h3>
-			<input type="text" name="name" value="email address">
-			<input type="button" value="Download Itinerary">
+			<div class="content-wrapper">
+				<div class="form-description">
+                    <h3>Whant to join the next retreat?</h3>
+                    <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+                    <h3>Find out more</h3>
+				</div>
+				<div class="form">
+                    <input type="text" name="name" value="email address">
+                    <input type="button" value="Download Itinerary">
+				</div>
+			</div>
 		</aside>
-		<section>
-            <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
-            <img src="img/campground.png" alt="Campground"/>
-            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
-            <img src="img/bed.png" alt="Bed"/>
-            <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-            <img src="img/utensils.png" alt="Utensils"/>
-            <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-            <img src="img/shoe-prints.png" alt="Shoe prints"/>
-            <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-            <img src="img/smile.png" alt="Smile"/>
-            <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-            <img src="img/wifi.png" alt="Wifi"/>
-            <p>Dedicated computer room for times that you must wifi.</p>
+		
+		
+<!-- FEATURES CONTENT HERE -->		
+		<section class="features">
+			<div class="content-wrapper">
+                <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+            </div>
 		</section>
-		<section>
-			<h2>Be a better team in 5 days, like these.</h2>
-			<img src="img/group-photo.png" alt="Team Photo"/>
-			<h3>LaCrue Bottling Co.<br>
-			October 2017</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+		
+		
+<!-- REVIEWS CONTENT HERE -->
+		<section class="reviews">
+			<div class="content-wrapper">
+                <h2>Be a better team in 5 days, like these.</h2>
+                <article>
+                    <div>
+                    <h3>LaCrue Bottling Co.<br>
+                    October 2017</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+					</div>
+                </article>
+            </div>
 		</section>
 	</main>
+	
+	
+<!-- FOOTER CONTENT HERE -->	
 	<footer>
 		<div class="content-wrapper">
 			<div class="footer-content">
@@ -84,8 +114,10 @@
                         hello@unplugged.com</p>
 					</address>
 				</div>
-				<div class="social-icons">
+				<div class="social">
 					<h3>Social</h3>
+				</div>
+				<div class="social-icons">					
 					<p><a href="#" target="_blank"></a></p>
 					<p><a href="#" target="_blank"></a></p>
 					<p><a href="#" target="_blank"></a></p>
@@ -93,6 +125,7 @@
 			</div>
 		</div>
 		<div class="copyright">
+			<p>Copyright 2019  |  Unplugged</p>
 		</div>
 	</footer>
 
