--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About | Art Sessions with Miss Robin</title>
+  <title>About | Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,9 +24,97 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Art Sessions with Miss Robin</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<!-- HEADER CONTENT HERE -->
+    <header>
+		<div class="content-wrapper">
+		<a href="#" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
+        <div class="header-divider">
+        </div>
+		<nav>
+			<ul>
+				<li><a href="faq/index.html" target="_blank">FAQ</a></li>
+				<li><a href="about/index.html" target="_blank">About</a></li>
+			</ul>
+        </nav>
+		</div>
+    </header>
+	
+
+
+<!-- MISSION CONTENT HERE -->
+	<main>
+        <section class="mission">
+            <div class="content-wrapper">
+                <div class="mission-content">
+                    <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                </div>
+            </div>
+        </section>
+		
+		
+		
+<!-- MAP CONTENT HERE -->
+		<section class="map">
+			<figure>
+			</figure>
+		</section>
+		
+		
+		
+<!-- CONTACT CONTENT HERE -->	
+		<div class="contact-section">
+			<div class="content-wrapper">
+				<h2>Contact us, because you all need this.</h2>
+                <address>
+					<div class="general">
+						<h3>General Information</h3>
+						<p>333 Main St, Lake Geneva, WI 53147<br>
+                        555-555-5555<br>
+                        hello@unplugged.com</p>
+					</div>
+					<div class="facilitator">
+						<h3>Chat with a Facilitator</h3>
+						<p>555-555-5556<br>
+                        facilitator@unplugged.com</p>
+					</div>
+                </address>
+			</div>
+		</div>
+		
+		
+		
+		
+    </main>	
+<!-- FOOTER CONTENT HERE -->	
+	<footer>
+		<div class="content-wrapper">
+			<div class="footer-content">
+				<div class="contact">
+					<address>
+						<h3>Contact</h3>
+                        <p>555-555-5555<br>
+                        hello@unplugged.com</p>
+					</address>
+				</div>
+				<div class="social">
+					<h3>Social</h3>
+				</div>
+				<div class="social-icons">					
+					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"></a></p>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<p>Copyright 2019  |  Unplugged</p>
+		</div>
+	</footer>	
+	
+	
+<script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
