--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FAQ | Art Sessions with Miss Robin</title>
+  <title>FAQ | Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,9 +24,75 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Art Sessions with Miss Robin</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<!-- HEADER CONTENT HERE -->
+    <header>
+		<div class="content-wrapper">
+		<a href="../index.html" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
+        <div class="header-divider">
+        </div>
+		<nav>
+			<ul>
+				<li><a href="#" target="_blank">FAQ</a></li>
+				<li><a href="../about/index.html" target="_blank">About</a></li>
+			</ul>
+        </nav>
+		</div>
+    </header>
+	
+
+
+<!-- MISSION CONTENT HERE -->
+	<main>
+        <section class="faq">
+            <div class="content-wrapper">
+				<h2>Frequently Asked Questions</h2>
+                <article>
+					<h3>How do I get to the Unplugged retreat?</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>
+				</article>
+				<article>
+					<h3>What kind of team is right for the Unplugged retreat?</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>
+				</article>
+				<article>
+					<h3>What size teams can you accommodate?</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				</article>
+				<article>
+					<h3>Is there really no wifi available?</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</article>
+            </div>
+        </section>
+    </main>	
+	
+	
+	
+<!-- FOOTER CONTENT HERE -->	
+	<footer>
+		<div class="content-wrapper">
+			<div class="footer-content">
+				<div class="contact">
+					<address>
+						<h3>Contact</h3>
+                        <p>555-555-5555<br>
+                        hello@unplugged.com</p>
+					</address>
+				</div>
+				<div class="social">
+					<h3>Social</h3>
+				</div>
+				<div class="social-icons">					
+					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"></a></p>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<p>Copyright 2019  |  Unplugged</p>
+		</div>
+	</footer>	  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
