--- a/about/index.html
+++ b/about/index.html
@@ -27,13 +27,13 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="#" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
+		<a href="../index.html" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
         <div class="header-divider">
         </div>
 		<nav>
 			<ul>
-				<li><a href="faq/index.html" target="_blank">FAQ</a></li>
-				<li><a href="about/index.html" target="_blank">About</a></li>
+				<li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+				<li><a href="#" target="_blank">About</a></li>
 			</ul>
         </nav>
 		</div>
