Added some drywall css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:image" content="">
 
 <link rel="manifest" href="site.webmanifest">
-<link rel="apple-touch-icon" href="../art-sessions/icon.png">
+<link rel="apple-touch-icon" href="icon.png">
 <!-- Place favicon.ico in the root directory -->
 
 <link rel="stylesheet" href="css/normalize.css">
@@ -27,7 +27,9 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="#" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
+		<a href="#">
+			<img src="img/unplugged-logo.png" alt="Unplugged Logo"/>
+        </a>
         <div class="header-divider">
         </div>
 		<nav>
