Formatting: width %s and padding

--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,7 +28,9 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="../index.html" src="img/unplugged-logo.png" alt="Unplugged Logo"></a>
+		<a href="#">
+			<img src="" alt="Unplugged Logo"/>
+        </a>
         <div class="header-divider">
         </div>
 		<nav>
