--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
 	
 <!-- HERO CONTENT HERE -->	
 	<main>
-		<section>
+		<section class="hero-area">
 			<div class="content-wrapper">
-                <div class="hero-area">
-                <h2>Retreat from the desk, return refreshed</h2>
-                </div>
+                <h1>Retreat from the desk, return refreshed</h1>
 			</div>
 		</section>
 		
@@ -58,7 +56,7 @@
 		<aside>
 			<div class="content-wrapper">
 				<div class="form-description">
-                    <h3>Whant to join the next retreat?</h3>
+                    <h3>Want to join the next retreat?</h3>
                     <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
                     <h3>Find out more</h3>
 				</div>
@@ -74,18 +72,32 @@
 		<section class="features">
 			<div class="content-wrapper">
                 <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+				<div class="features-items">
+					<article>
+                        <p class="fontawesome-icon"></p>
+                        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
+					</article>
+					<article>
+                        <p class="fontawesome-icon"></p>
+                        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+					</article>
+					<article>
+                        <p class="fontawesome-icon"></p>
+                        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+					</article>
+					<article>
+                        <p class="fontawesome-icon"></p>
+                        <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+					</article>
+					<article>
+                        <p class="fontawesome-icon"></p>
+                        <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+					</article>
+					<article>
+                        <p class="fontawesome-icon"></p>
+                        <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+					</article>					
+				</div>
             </div>
 		</section>
 		
