--- a/about/index.html
+++ b/about/index.html
@@ -48,8 +48,8 @@
 	<main>
         <section class="mission">
             <div class="content-wrapper">
+                <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
                 <div class="mission-content">
-                    <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
                 </div>
@@ -67,7 +67,7 @@
 		
 		
 <!-- CONTACT CONTENT HERE -->	
-		<div class="contact-section">
+		<section class="contact-section">
 			<div class="content-wrapper">
 				<h2>Contact us, because you all need this.</h2>
                 <address>
@@ -84,7 +84,7 @@
 					</div>
                 </address>
 			</div>
-		</div>
+		</section>
 		
 		
 		
