--- a/faq/index.html
+++ b/faq/index.html
@@ -44,28 +44,26 @@
 
 
 <!-- MISSION CONTENT HERE -->
-	<main>
-        <section class="faq">
-            <div class="content-wrapper">
-				<h2>Frequently Asked Questions</h2>
-                <article>
-					<h3>How do I get to the Unplugged retreat?</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>
-				</article>
-				<article>
-					<h3>What kind of team is right for the Unplugged retreat?</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>
-				</article>
-				<article>
-					<h3>What size teams can you accommodate?</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-				</article>
-				<article>
-					<h3>Is there really no wifi available?</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-				</article>
+	<main class="faq">
+        <div class="content-wrapper">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-content">
+                <h3>How do I get to the Unplugged retreat?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>
             </div>
-        </section>
+            <div class="faq-content">
+                <h3>What kind of team is right for the Unplugged retreat?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>
+            </div>
+            <div class="faq-content">
+                <h3>What size teams can you accommodate?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+            <div class="faq-content">
+                <h3>Is there really no wifi available?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+            </div>
+        </div>
     </main>	
 	
 	
