--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="#">
-			<img src="img/unplugged-logo.png" alt="Unplugged Logo"/>
-        </a>
-        <div class="header-divider">
-        </div>
-		<nav>
-			<ul>
-				<li><a href="faq/index.html" target="_blank">FAQ</a></li>
-				<li><a href="about/index.html" target="_blank">About</a></li>
-			</ul>
-        </nav>
+            <a href="#">
+                <img src="" alt="Unplugged Logo"/>
+            </a>
+            <div class="header-divider">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                    <li><a href="about/index.html" target="_blank">About</a></li>
+                </ul>
+            </nav>
 		</div>
     </header>
 	
@@ -58,9 +58,9 @@
 				<div class="form-description">
                     <h3>Want to join the next retreat?</h3>
                     <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-                    <h3>Find out more</h3>
 				</div>
 				<div class="form">
+                    <h3>Find out more</h3>
                     <input type="text" name="name" value="email address">
                     <input type="button" value="Download Itinerary">
 				</div>
