--- a/about/index.html
+++ b/about/index.html
@@ -70,14 +70,14 @@
 		<section class="contact-section">
 			<div class="content-wrapper">
 				<h2>Contact us, because you all need this.</h2>
-                <address>
-					<div class="general">
+                <address class="contact-content">
+					<div>
 						<h3>General Information</h3>
 						<p>333 Main St, Lake Geneva, WI 53147<br>
                         555-555-5555<br>
                         hello@unplugged.com</p>
 					</div>
-					<div class="facilitator">
+					<div>
 						<h3>Chat with a Facilitator</h3>
 						<p>555-555-5556<br>
                         facilitator@unplugged.com</p>
