Implemented remaining styles

--- a/faq/index.html
+++ b/faq/index.html
@@ -28,7 +28,7 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="#">
+		<a href="../index.html">
 			<img src="" alt="Unplugged Logo"/>
         </a>        <div class="header-divider">
         </div>
