--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-            <a href="#">
-                <img src="" alt="Unplugged Logo"/>
+            <figure>
+                <a href="#">
+                <img src="img/unplugged-logo.png" alt="Unplugged Logo"/>
             </a>
+			</figure>
             <div class="header-divider">
             </div>
             <nav>
@@ -61,7 +63,7 @@
 				</div>
 				<div class="form">
                     <h3>Find out more</h3>
-                    <input type="text" name="name" value="email address">
+                    <input type="text" name="name" value="name@email.com">
                     <input type="button" value="Download Itinerary">
 				</div>
 			</div>
@@ -107,12 +109,13 @@
 			<div class="content-wrapper">
                 <h2>Be a better team in 5 days, like these.</h2>
                 <article>
-					
-                    <div>
+					<figure>
 						<img src="img/lacrue-team-photo.jpg" alt="LaCrue Bottling Co. Team Photo"/>
-                    <h3>LaCrue Bottling Co.<br>
-                    October 2017</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+					</figure>					
+                    <div>						
+                        <h3>LaCrue Bottling Co.<br>
+                        October 2017</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
 					</div>
                 </article>
             </div>
