Added map iframe to about page

--- a/about/index.html
+++ b/about/index.html
@@ -28,12 +28,14 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="../index.html">
-			<img src="" alt="Unplugged Logo"/>
-        </a>
-        <div class="header-divider">
-        </div>
-		<nav>
+            <figure>
+                <a href="#">
+                <img src="img/unplugged-logo.png" alt="Unplugged Logo"/>
+            </a>
+			</figure>
+            <div class="header-divider">
+            </div>
+            <nav>
 			<ul>
 				<li><a href="../faq/index.html" target="_blank">FAQ</a></li>
 				<li><a href="#" target="_blank">About</a></li>
@@ -61,6 +63,7 @@
 <!-- MAP CONTENT HERE -->
 		<section class="map">
 			<figure>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2896.061181751702!2d-80.47523058428165!3d43.459319872963604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf4bcc0893be9%3A0xec42e14d5081fd7f!2s295%20Mansion%20St%2C%20Kitchener%2C%20ON%20N2H%202K8!5e0!3m2!1sen!2sca!4v1603505064482!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</figure>
 		</section>
 		
