--- a/about/index.html
+++ b/about/index.html
@@ -29,18 +29,18 @@
     <header>
 		<div class="content-wrapper">
             <figure>
-                <a href="#">
-                <img src="img/unplugged-logo.png" alt="Unplugged Logo"/>
-            </a>
+                <a href="../index.html">
+                <img src="../img/unplugged-logo.png" alt="Unplugged Logo"/>
+                </a>
 			</figure>
             <div class="header-divider">
             </div>
             <nav>
-			<ul>
-				<li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-				<li><a href="#" target="_blank">About</a></li>
-			</ul>
-        </nav>
+                <ul>
+                    <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+                    <li><a href="#" target="_blank">About</a></li>
+                </ul>
+            </nav>
 		</div>
     </header>
 	
