--- a/faq/index.html
+++ b/faq/index.html
@@ -28,16 +28,19 @@
 <!-- HEADER CONTENT HERE -->
     <header>
 		<div class="content-wrapper">
-		<a href="../index.html">
-			<img src="" alt="Unplugged Logo"/>
-        </a>        <div class="header-divider">
-        </div>
-		<nav>
-			<ul>
-				<li><a href="#" target="_blank">FAQ</a></li>
-				<li><a href="../about/index.html" target="_blank">About</a></li>
-			</ul>
-        </nav>
+            <figure>
+                <a href="../index.html">
+                <img src="../img/unplugged-logo.png" alt="Unplugged Logo"/>
+                </a>
+			</figure>
+        
+		<div class="header-divider"></div>
+            <nav>
+                <ul>
+                    <li><a href="#" target="_blank">FAQ</a></li>
+                    <li><a href="../about/index.html" target="_blank">About</a></li>
+                </ul>
+            </nav>
 		</div>
     </header>
 	
