--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Unplugged</title>
+<title>Unplugged | Home</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,6 +19,8 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
+	
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">	
 
 <meta name="theme-color" content="#fafafa">
 </head>
@@ -76,27 +78,27 @@
                 <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
 				<div class="features-items">
 					<article>
-                        <p class="fontawesome-icon"></p>
+                        <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
                         <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
 					</article>
 					<article>
-                        <p class="fontawesome-icon"></p>
+                        <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
                         <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
 					</article>
 					<article>
-                        <p class="fontawesome-icon"></p>
+                        <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
                         <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
 					</article>
 					<article>
-                        <p class="fontawesome-icon"></p>
+						<p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
                         <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
 					</article>
 					<article>
-                        <p class="fontawesome-icon"></p>
+                        <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
                         <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
 					</article>
 					<article>
-                        <p class="fontawesome-icon"></p>
+                        <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
                         <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
 					</article>					
 				</div>
@@ -138,14 +140,14 @@
 					<h3>Social</h3>
 				</div>
 				<div class="social-icons">					
-					<p><a href="#" target="_blank"></a></p>
-					<p><a href="#" target="_blank"></a></p>
-					<p><a href="#" target="_blank"></a></p>
+					<p><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></p>
+					<p><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></p>
+					<p><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></p>
 				</div>
 			</div>
 		</div>
 		<div class="copyright">
-			<p>Copyright 2019  |  Unplugged</p>
+			<p>Copyright 2020  |  Chelsea Crank</p>
 		</div>
 	</footer>
 
