Fixed social icons

--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
+	
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">	
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -98,24 +100,24 @@
 		<div class="content-wrapper">
 			<div class="footer-content">
 				<div class="contact">
-					<address>
-						<h3>Contact</h3>
+					<h3>Contact</h3>
+					<address>						
                         <p>555-555-5555<br>
                         hello@unplugged.com</p>
 					</address>
 				</div>
 				<div class="social">
-					<h3>Social</h3>
-				</div>
-				<div class="social-icons">					
-					<p><a href="#" target="_blank"></a></p>
-					<p><a href="#" target="_blank"></a></p>
-					<p><a href="#" target="_blank"></a></p>
-				</div>
+					<h3>Social</h3>				
+                    <div class="social-icons">					
+                        <p><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></p>
+                        <p><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></p>
+                        <p><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></p>
+                    </div>
+                </div>	
 			</div>
 		</div>
 		<div class="copyright">
-			<p>Copyright 2019  |  Unplugged</p>
+			<p>Copyright 2020  |  Chelsea Crank</p>
 		</div>
 	</footer>	
 	
