--- a/index.html
+++ b/index.html
@@ -130,20 +130,20 @@
 		<div class="content-wrapper">
 			<div class="footer-content">
 				<div class="contact">
-					<address>
-						<h3>Contact</h3>
+					<h3>Contact</h3>
+					<address>						
                         <p>555-555-5555<br>
                         hello@unplugged.com</p>
 					</address>
 				</div>
 				<div class="social">
-					<h3>Social</h3>
-				</div>
-				<div class="social-icons">					
-					<p><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></p>
-					<p><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></p>
-					<p><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></p>
-				</div>
+					<h3>Social</h3>				
+                    <div class="social-icons">					
+                        <p><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></p>
+                        <p><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></p>
+                        <p><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></p>
+                    </div>
+                </div>	
 			</div>
 		</div>
 		<div class="copyright">
